--- a/src/components/layout.module.css
+++ b/src/components/layout.module.css
@@ -1,11 +1,5 @@
-.container {
-    margin: auto;
-    max-width: 500px;
-    font-family: sans-serif;
-}
-
 .heading {
-    color: rebeccapurple;
+   margin-bottom: 2rem;
 }
 .nav-links {
     display: flex;
